# OpenAvatarChat

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  readme_en.md  temp_download_sensevoice.py
config/: chat_with_lam.yaml  chat_with_lam_qwen3_asr.yaml  chat_with_lam_qwen3_asr_translate.yaml  chat_with_openai_compatible_bailian_cosyvoice.yaml
scripts/: run_hot.sh  run_with_reload.py
src/: demo.py
src/chat_engine/common/: handler_base.py
src/chat_engine/contexts/: session_context.py
src/chat_engine/core/: chat_session.py
src/handlers/asr/qwen3_asr_flash/: asr_handler_qwen3_asr_flash.py  pyproject.toml
src/handlers/client/h5_rendering_client/: client_handler_lam.py
src/handlers/client/rtc_client/: client_handler_rtc.py
src/handlers/llm/openai_compatible/: llm_handler_openai_compatible.py
src/handlers/translate/: translator_handler.py
src/handlers/tts/bailian_tts/: tts_handler_cosyvoice_bailian.py
src/handlers/vad/silerovad/: vad_handler_silero.py
src/service/rtc_service/: rtc_stream.py
