[project]
name = "qwen3-asr-flash-handler"
version = "0.1.0"
description = "Qwen3-ASR-Flash-Realtime handler for OpenAvatarChat"
dependencies = [
    "websocket-client>=1.6.0",
    "numpy<=1.26.4",
    "pydantic~=2.10.6",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"